Report of the drag and drop not working - issue #3

--- a/admin-menu-editor/css/style.css
+++ b/admin-menu-editor/css/style.css
@@ -4,6 +4,11 @@ li[data-is_protected="true"] .menu-item-actions
 	display:none
 }
 
+.menu-item-handle 
+{
+	z-index: 100;
+}
+
 li[data-is_protected="true"] .menu-item-handle
 {
 	cursor:default
