--- a/admin-menu-editor/css/style.css
+++ b/admin-menu-editor/css/style.css
@@ -6,7 +6,7 @@ li[data-is_protected="true"] .menu-item-actions
 
 .menu-item-handle 
 {
-	z-index: 100;
+	z-index: 20;
 }
 
 li[data-is_protected="true"] .menu-item-handle
@@ -90,6 +90,11 @@ div.update
 	position:relative!important
 }
 
+.deleted-menu-items .item-controls
+{
+	padding: 6px;
+}
+
 .menu-spacer-template
 {
 	color:silver
@@ -128,31 +133,46 @@ div.update
 }
 
 .ui-dialog-titlebar {
-    background: #f5f5f5 ;
+    /*background: #f5f5f5 ;*/
+	background: transparent;
+	border: none;
+	height: auto;
+	font-size: inherit;
+	font-weight: inherit;
+	line-height: inherit;
 }
 
 .ui-dialog-titlebar-close span {
     display: block;
-    margin: 1px; 
-
+    margin: 1px;
 }
 
-.ui-dialog .ui-dialog-titlebar-close {
-    position: relative;
-    right: 0;
-    top: 50%;
-    width: 10px;
-    margin: -5px 0 0px 110px;
-    padding: 0px;
-    height: 10px;
-    background: #f5f5f5 ;
-    border: 0px solid #f5f5f5;
+.ui-dialog-titlebar-close:before {
+	content: '';
+}
+
+.ui-button-icon-only .ui-icon {
+	position: relative;
+	left: 0;
+	top: 0;
 }
 
 .ui-widget-header .ui-dialog-titlebar-close.ui-state-hover {
     background: #f5f5f5;
 }
 
+.ui-dialog .ui-dialog-titlebar-close:hover, .ui-dialog .ui-dialog-titlebar-close:focus {
+	padding: 3px;
+}
+
 .ui-widget-overlay {
     position: fixed;
+}
+
+.ui-dialog .ui-dialog-buttonpane button {
+	height: auto;
+}
+
+.item-controls {
+	font-size: inherit;
 }
